--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "style-loader": "^0.20.3",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-dev-server": "^3.2.1",
+    "lodash": "^4.17.15"
   },
-  "dependencies": {}
+  "dependencies": {
+  }
 }
