--- a/package.json
+++ b/package.json
@@ -11,19 +11,18 @@
   "author": "Jonas Otto",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.4.0",
-    "acorn": "^6.1.1",
+    "@babel/core": "^7.5.5",
+    "acorn": "^6.3.0",
     "babel-loader": "^8.0.5",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.11",
+    "lodash": "^4.17.15",
     "node-sass": "^4.8.3",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.2.1",
-    "lodash": "^4.17.15"
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
